Error handling (#1097)